# rover_ws

./: CONTROLLER_FIXES_AND_TUNING.md  commands to setup microros.md  setup arduino-cli.md
documents/: frames_2026-06-06_22.32.11.gv
onshape_model/: config.json  rover.urdf
onshape_model/meshes/: base_link.stl  wheel.part  wheel.stl
pythoncodes/: ws281_64led.py
rover_microros/: ARCHITECTURE.md  motor_controller.h  rover_microros.ino
src/micro_ros_agent/launch/: micro_ros_agent_launch.py
src/pi_camera/: README.md  package.xml  setup.py
src/pi_camera/config/: camera.yaml
src/pi_camera/launch/: camera.launch.py
src/pi_camera/pi_camera/: camera_node.py
src/rover_bringup/: CMakeLists.txt  README.md  package.xml
src/rover_bringup/launch/: motors_only.launch.py  rover_full.launch.py  sensors_only.launch.py
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/launch/: display.launch.py
src/rover_description/meshes/: base_link.part  camera_lens.part  camera_lens.stl  camera_link.part  camera_link.stl  frame.part  lidar.part  lidar.stl  lidar_link.part  lidar_link.stl  rover_body.part  rover_body.stl  wheel.part  wheel.stl
src/rover_description/rviz/: display.rviz
src/rover_description/urdf/: camera.xacro  lidar.xacro  robot.urdf.xacro  rover.urdf.xacro  rover_core.xacro
src/tof_sensor/: package.xml  setup.py
src/tof_sensor/launch/: tof.launch.py
src/tof_sensor/tof_sensor/: tof_node.py
webpage/: rover_microros_web.html
