<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pi_camera</name>
  <version>1.0.0</version>
  <description>
    Raspberry Pi Camera Module 3 Wide driver for ROS2 Jazzy.
    Publishes image_raw, camera_info, and compressed topics
    with selectable resolution and fps for use in robotics.
  </description>
  <maintainer email="lucy@lucy.local">lucy</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>

  <exec_depend>camera_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
